JigTypeBuilderとJigTypeHeaderを両方持つ形にして挿げ替えていく